# rock-paper-scissors

./: .gitignore  CMakeLists.txt  CONVENTIONS.md  DOCS.md  build.sh  main.cpp  todo.txt
Actor/: Actor.cpp  Actor.h
Actor/Actors/MiniMe/: MiniMe.cpp  MiniMe.h
Actor/Actors/Player/: Player.cpp  Player.h
Actor/Actors/View/: View.cpp  View.h
Animation/: Animation.h
CyclicList/: CyclicList.h
Error/: Error.cpp  Error.h
Matrix/: Matrix.cpp  Matrix.h
RemoteEventHandling/: RemoteEventHandling.cpp  RemoteEventHandling.h
State/: State.cpp  State.h
Vector/: Vector.cpp  Vector.h
sdl_tools/: Error.cpp  Error.h  Renderer.cpp  Renderer.h  SDL_Environment.cpp  SDL_Environment.h  Window.cpp  Window.h
sdl_tools/Config/: Config.cpp  Config.h
sdl_tools/Renderer/: Renderer.cpp  Renderer.h
sdl_tools/SDL_Environment/: SDL_Environment.cpp  SDL_Environment.h
sdl_tools/Texture/: Texture.cpp  Texture.h
sdl_tools/Window/: Window.cpp  Window.h
utils/: Utils.cpp  Utils.h
